--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -143,7 +143,7 @@
     <Compile Include="BlockLimiter.cs" />
     <Compile Include="Commands\Admin.cs" />
     <Compile Include="Commands\Player.cs" />
-    <Compile Include="Handlers\ProjectionHandler.cs" />
+    <Compile Include="Patch\ProjectionPatch.cs" />
     <Compile Include="ProcessHandlers\Faction.cs" />
     <Compile Include="ProcessHandlers\Grid.cs" />
     <Compile Include="ProcessHandlers\ProcessHandlerBase.cs" />
@@ -154,8 +154,8 @@
     <Compile Include="Settings\LimitItem.cs" />
     <Compile Include="Utility\MTObservableCollection.cs" />
     <Compile Include="Utility\Utilities.cs" />
-    <Compile Include="Handlers\BuildBlockHandler.cs" />
-    <Compile Include="Handlers\GridSpawnHandler.cs" />
+    <Compile Include="Patch\BuildBlockPatch.cs" />
+    <Compile Include="Patch\GridSpawnPatch.cs" />
     <Compile Include="Settings\BlockLimiterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
