Added GridChangePatch Fix ProjectionPatch

--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -143,11 +143,9 @@
     <Compile Include="BlockLimiter.cs" />
     <Compile Include="Commands\Admin.cs" />
     <Compile Include="Commands\Player.cs" />
+    <Compile Include="Patch\GridChange.cs" />
     <Compile Include="Patch\ProjectionPatch.cs" />
-    <Compile Include="ProcessHandlers\Faction.cs" />
-    <Compile Include="ProcessHandlers\Grid.cs" />
     <Compile Include="ProcessHandlers\ProcessHandlerBase.cs" />
-    <Compile Include="ProcessHandlers\Player.cs" />
     <Compile Include="Punishment\Annoy.cs" />
     <Compile Include="Punishment\Punish.cs" />
     <Compile Include="Utility\Block.cs" />
@@ -155,7 +153,6 @@
     <Compile Include="Utility\GridCache.cs" />
     <Compile Include="Settings\LimitItem.cs" />
     <Compile Include="Utility\MTObservableCollection.cs" />
-    <Compile Include="Utility\Projector.cs" />
     <Compile Include="Utility\Utilities.cs" />
     <Compile Include="Patch\BuildBlockPatch.cs" />
     <Compile Include="Patch\GridSpawnPatch.cs" />
