--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Patch\ProjectionPatch.cs" />
     <Compile Include="ProcessHandlers\ProcessHandlerBase.cs" />
     <Compile Include="Punishment\Annoy.cs" />
+    <Compile Include="Patch\BlockSwitchPatch.cs" />
     <Compile Include="Punishment\Punish.cs" />
     <Compile Include="Settings\LoggingConfig.cs" />
     <Compile Include="Utility\Block.cs" />
