--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Patch\BlockSwitchPatch.cs" />
     <Compile Include="Punishment\Punish.cs" />
     <Compile Include="Settings\LoggingConfig.cs" />
+    <Compile Include="Settings\PlayerTime.cs" />
     <Compile Include="Utility\Block.cs" />
     <Compile Include="Utility\Grid.cs" />
     <Compile Include="Utility\GridCache.cs" />
