--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -41,6 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\TorchBinaries\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>$(SolutionDir)\GameBinaries\NLog.dll</HintPath>
       <Private>False</Private>
@@ -152,7 +156,7 @@
     <Compile Include="Patch\BlockSwitchPatch.cs" />
     <Compile Include="Punishment\Punish.cs" />
     <Compile Include="Settings\LoggingConfig.cs" />
-    <Compile Include="Settings\PlayerTime.cs" />
+    <Compile Include="Settings\PlayerTimeModule.cs" />
     <Compile Include="Utility\Block.cs" />
     <Compile Include="Utility\Grid.cs" />
     <Compile Include="Utility\GridCache.cs" />
