--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\GameBinaries\netstandard.dll</HintPath>
+      <HintPath>..\..\GameBinaries\netstandard.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
@@ -158,6 +158,7 @@
     <Compile Include="Patch\MergeBlockPatch.cs" />
     <Compile Include="Patch\ProjectionPatch.cs" />
     <Compile Include="PluginApi\Limits.cs" />
+    <Compile Include="PluginApi\PointCheckAPI.cs" />
     <Compile Include="ProcessHandlers\ProcessHandlerBase.cs" />
     <Compile Include="Punishment\Annoy.cs" />
     <Compile Include="Patch\BlockSwitchPatch.cs" />
