--- a/BlockLimiter/.gitignore
+++ b/BlockLimiter/.gitignore
@@ -1,7 +1,7 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-/[Oo]bj
+/obj
 /.idea/.idea.BlockLimiter
 /BlockLimiter/bin
 /GameBinaries
