added essential rank filtering support

--- a/BlockLimiter/BlockLimiter.csproj
+++ b/BlockLimiter/BlockLimiter.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Patch\MechanicalConnection.cs" />
     <Compile Include="Patch\MergeBlockPatch.cs" />
     <Compile Include="Patch\ProjectionPatch.cs" />
+    <Compile Include="PluginApi\EssentialsPlayerAccount.cs" />
     <Compile Include="PluginApi\Limits.cs" />
     <Compile Include="ProcessHandlers\ProcessHandlerBase.cs" />
     <Compile Include="Punishment\Annoy.cs" />
